# DeFi-Bloomberg

./: .env.example  .gitignore  CLAUDE.md  README.md  SANDBOX_PLAN.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
src/: __init__.py
src/analytics/: __init__.py  engine.py
src/analytics/kpis/: __init__.py  base.py  elasticity.py  irm_metrics.py  mean_reversion.py  risk_adjusted.py  utilization.py  volatility.py
src/core/: __init__.py  constants.py
src/core/constants/: __init__.py  chains.py  generic.py
src/core/models/: __init__.py  kpi.py  market.py  position.py  timeseries.py  vault.py
src/data/: __init__.py  pipeline.py
src/data/cache/: __init__.py  disk_cache.py
src/data/clients/: __init__.py  base.py  registry.py
src/data/sources/: __init__.py  alchemy_provider.py  morpho_api.py  risk_free_rates.py
src/protocols/: __init__.py
src/protocols/aave/: __init__.py  assets.py  config.py  queries.py
src/protocols/morpho/: __init__.py  assets.py  config.py  irm.py  queries.py
src/sandbox/: __init__.py
src/sandbox/data/: __init__.py  aggregator.py
src/sandbox/engine/: __init__.py  allocator.py  debt_optimizer.py  risk.py  simulator.py
src/sandbox/models/: __init__.py  allocation.py  position.py  rebalancing.py  simulation.py  strategy.py
src/sandbox/persistence/: __init__.py  storage.py
src/sandbox/strategies/: __init__.py  (+2 more)
src/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_aave_api.py  test_kpis.py  test_morpho_api.py
(+24 files in other folders)
