[project]
name = "morpho-tracker"
version = "0.1.0"
description = "Bloomberg-style Terminal UI for monitoring Morpho Blue positions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "textual>=0.47.0",
    "rich>=13.7.0",
    # Data
    "gql[aiohttp]>=3.5.0",
    "web3>=6.15.0",
    "aiohttp>=3.9.0",
    # Analytics
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    # Infrastructure
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "diskcache>=5.6.0",
    "aiolimiter>=1.1.0",
    "python-dotenv>=1.0.0",
    # Charts
    "asciichartpy>=1.5.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
morpho-tracker = "src.ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
